siril 0.9.8
--/--/17

* Reduce display time of autostretch
* Parallelize sum stacking
* Use thread-safe progress bar update instead of deprecated one. Run 'Check sequences' in a background task
* Add an option to set the generic image_hook behaviour when function fails
* Switch on "Images previously manually selected from the sequence" if user check and uncheck frames
* Fixed menu update after RGB composition
* Fixed bug in "Average" and "Median" stack for huge SER file
* Fixed bug in stackall command
* Fixed when it was impossible to use multithread functions after star alignment in compositing tool
* Fixed crash when selecting "Best images .. (PSF)" if the loaded sequence has no PSF data
* Fixed sorted images by FWHM
* Fixed crash on stacking when no reference image is selected and first image of the sequence is excluded

siril 0.9.7
09/21/17

* Fixed French translation
* Fixed bug in registration from compositing for layers alignment
* Fixed crash when stacking failed
* Fixed limit of 4Go SER file for non POSIX Standard
* Improved global registration. New algorithm with homography

siril 0.9.6
06/20/17

* Allow sequence export to use stacking image filtering
* Get the working directory as an optional command line argument
* Improve photometry
* Fixed wrong selected image in list panel when list was sorted
* Fixed registration with unselected images which made progress bar exceed 100%
* Fixed again compilation that failed on KFreeBSD
* Fixed name of Red Layer using compositing tool that was wrong

siril 0.9.5
11/28/16

* Implement a graph interface to display quality registration information
* No X and Y binning value could lead to errors with fwhm
* Take reference image as normalisation reference
* Retrieve Bayer pattern from RAW file
* Export sequence to MP4
* Statistics should not take into account black point
* Add ComboBox for registration interpolation
* Fixed interpolation in global star registration that gave blurred results