@@ -12,11 +12,6 @@
 #endif
 #include <libintl.h>
 
-// PATH_MAX is not available on Hurd at least
-#ifndef PATH_MAX
-#define PATH_MAX 4096
-#endif
-
 #define _(String) gettext (String)
 #define gettext_noop(String) String
 #define N_(String) gettext_noop (String)
