@@ -1,6 +1,7 @@
 v0.9.8, xxxx, 2017
 Stability update for v0.9.7
 
+* Change default working directory
 * Reduce display time of autostretch
 * Parallelize sum stacking
 * Use thread-safe progress bar update instead of deprecated one. Run 'Check sequences' in a background task
@@ -114,7 +115,7 @@ First stable version. High quality processing for deep-sky images is fully
 functional, a basic processing is available for planetary images.
 A list of solved issues and new features since the introduction of the bug
 tracking system at mid-course can be seen here:
-http://free-astro.vinvin.tf/bugs/roadmap_page.php?version_id=1
+http://free-astro.org/bugs/roadmap_page.php?version_id=1
 The main features introduced since the previous version are:
  * new global star registration, taking into account field rotation
  * new quality evaluation method for planetary images, used to sort the best
@@ -137,7 +138,7 @@ v0.9.0-rc1, Dec 29, 2014.
  * GTK+ minimal version is now 3.6
 
 v0.9.0-beta (new version), Nov 11, 2014: major refactoring. See more details at
-http://free-astro.vinvin.tf/index.php/Siril:0.9.0_beta
+http://free-astro.org/index.php/Siril:0.9.0_beta
  * new development team and website
  * many new image formats supported for import (converted to Siril's FITS: 8-bit
    and 16-bit BMP, TIFF, JPEG, PNG, NetPBM binary images, PIC (IRIS), RAW DSLR
