@@ -1,6 +1,7 @@
 siril 0.9.8
 --/--/17
 
+* Change default working directory
 * Reduce display time of autostretch
 * Parallelize sum stacking
 * Use thread-safe progress bar update instead of deprecated one. Run 'Check sequences' in a background task
